More fixes to greeting spacing - increased top positioning value (8vh to 10vh) - removed negative margin from header image

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -28,7 +28,7 @@ page-home {
   }
   .hello-text {
     position: absolute;
-    top: 8vh;
+    top: 10vh;
     left: 2em;
     z-index: 10;
     color: white;
@@ -110,7 +110,7 @@ page-home {
     }
     .curved-img-landscape {
       display: flex;
-      margin-top: -1em;
+      margin-top: -0.5em;
     }
     .hello-text {
       width: 100%;
